# TODO-App

./: .dockerignore  .gitignore  GEMINI.md  cookies.txt  docker-compose.yml
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/todo/: cli.py  database.py  main.py  models.py  storage.py
backend/src/todo/auth/: jwt_handler.py
backend/src/todo/models/: task.py  user.py
backend/src/todo/routes/: tasks.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/components/: ConfirmModal.tsx  TaskCard.tsx  TaskForm.tsx  Toast.tsx
history/prompts/001-cli-todo-app/: 0001-create-cli-todo-app-phase-i-spec.spec.prompt.md  0002-implementation-plan-phase-i.plan.prompt.md  0003-generate-actionable-tasks-for-cli-todo-app.tasks.prompt.md  0004-implement-cli-todo-app-phase-i.green.prompt.md  0005-commit-phase-i-implementation.misc.prompt.md  0006-push-implementation-to-remote.misc.prompt.md
history/prompts/002-web-todo-app/: 0001-generate-web-todo-app-spec.spec.prompt.md  0002-technical-planning-phase-ii.plan.prompt.md  0003-generate-actionable-tasks-phase-ii.tasks.prompt.md  (+10 more)
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-auth-and-access/: plan.md  research.md  spec.md  tasks.md
tests/integration/: test_add_list.py  test_complete_delete.py  test_update.py
(+18 files in other folders)
