[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple CLI todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest"]

[project.scripts]
todo = "todo.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["../tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]

